# vibe-reading

./: .gitignore  README.md  SKILL.md  config.sh  fetch-youtube-transcript.sh  init-db.sh  pyproject.toml  reading-notes.sh
docs/: 2026-01-21-system-design.md  ARCHITECTURE.md
docs/plans/: 2026-01-21-deep-reading-v2.md
docs/reports/: 2026-01-21-design-review.md
notes/: index.md
notes/sources/youtube_KyfUysrNaco/: transcript.txt
notes/sources/youtube_YvWU4Zd-IMc/: transcript.txt
src/: db.py  models.py
src/fetcher/: cli.py  pdf.py  youtube.py
src/player/: cli.py  mpv_controller.py
src/processor/: cli.py  inspectional.py
tests/: conftest.py  test_db.py  test_fetcher_cli.py  test_inspectional.py  test_models.py  test_mpv_controller.py  test_pdf_fetcher.py  test_player_cli.py  test_processor_cli.py  test_youtube.py
